# LLM_Bias

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  streamlit_app.py
docs/: EASY_STEPS.md  EVALUATION_AND_REPORT_PLAN.md  IMPLEMENTATION_SUMMARY.md  MESSAGE_TO_ANTONELA.md  PAPER_ANALYSIS_ACL_2025.md  RESEARCH_STATUS_AND_NEXT_STEPS.md  VERIFICATION_AGAINST_PAPER.md
outputs/db_export/: runs.csv  runs.json
outputs/results/: analysis_report.md
results_and_runs/: runs_202602242233.csv  runs_20260316235711.csv
scripts/: analyze.py  check_db.py  dedupe_db.py  dedupe_runs.sql  export_db_to_files.py  export_results_to_csv.py  import_json_to_db.py  import_results_from_csv.py  run_experiments.py  run_ollama_cloud.py  update_runs_model_names.sql
src/: io.py
src/analysis/: attention_analysis.py  layerwise.py  metrics.py
src/db/: client.py
src/models/: hf_model.py  ollama_cloud.py  openai_model.py
src/run/: experiment.py
